--- a/home/.config/beets/config.yaml
+++ b/home/.config/beets/config.yaml
@@ -1,4 +1,4 @@
-plugins: inline zero
+plugins: inline zero lyrics
 
 directory: ~/music
 library: ~/.config/beets/musiclibrary.db
@@ -19,9 +19,11 @@ paths:
 item_fields:
         disc_and_track: u'%i-%02i' % (disc, track) if disctotal > 1 else u'%02i' % (track)
 
+format_item: $albumartist - $album - $track - $title
+
 # 2.4 (current default) is not widely understood
 id3v23: yes
 
 zero:
         # these are still retained in the beets db, just not present in the file metadata
-        fields: artist_sort artist_credit albumartist_sort albumartist_credit genre lyricist composer_sort arranger grouping albumtype label asin catalognum language country albumstatus media albumdisambig
+        fields: artist_sort artist_credit albumartist_sort albumartist_credit genre lyricist composer composer_sort arranger grouping albumtype label asin catalognum language country albumstatus media albumdisambig
