--- a/home/.config/beets/config.yaml
+++ b/home/.config/beets/config.yaml
@@ -1,12 +1,33 @@
-# todo: grab missing artwork - fetchart embedart plugins
+# import:
+#   beet import ~/Downloads/NewAlbum
+#
+# manually fix fails:
+#   beet modify -a album:"Once More ’Round The Sun" album="Once More Round The Sun"
+#   beet modify album:"Once More Round The Sun" title:"Once More ’Round The Sun" track:4 title="Once More Round The Sun"
+#
+# detect art:
+#   metaflac --list music/Mastodon/Blood\ Mountain/01\ The\ Wolf\ Is\ Loose.flac | grep "type: 6 (PICTURE)"
+#
+# embed art:
+#   beet fetchart Blood Mountain
+#   beet embedart Blood Mountain
+#
+# remove album cruft from db:
+#   beet modify -a albumartist_credit= genre= albumtype= label= asin= catalognum= script= language= country= albumstatus= albumdisambig=
+
 
 # strange android bug: a space followed by RIGHT SINGLE QUOTATION MARK U+2019 will cause an escaping glitch when displaying; beet modify it to a regular single quote
-
+#
 # don't muck around with discogs; stick with musicbrainz as beets is very tightly coupled
+#
+# musicbrainz notes track lengths, however these are ignored in favour of the actual length of the track
+
 
 plugins:
   - zero
   - lyrics
+  - fetchart
+  - embedart
 
 directory: ~/music
 library: ~/.config/beets/musiclibrary.db
@@ -22,8 +43,7 @@ paths:
 
 format_item: $albumartist - $album - $track - $title - $format
 
-# zero doesn't currently affect album cruft; manually remove via
-#   beet modify -a albumartist_credit= genre= albumtype= label= asin= catalognum= script= language= country= albumstatus= albumdisambig=
+# zero doesn't currently affect album cruft; manually remove via recipe above
 zero:
   update_database: true
   fields:
@@ -48,3 +68,11 @@ zero:
     - lyricist
     - media
     - script
+
+fetchart:
+  auto: no
+
+embedart:
+  auto: no
+  ifempty: yes
+  remove_art_file: yes
