xorg: add toggleable dvorak programmer layout

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -1,7 +1,10 @@
 Section "InputClass"
-	Identifier "keyboard defaults"
+	Identifier "querty-dvp"
 	MatchIsKeyboard "on"
 	# look in Xorg.n.log to find the name that may be used for MatchProduct
-	Option "XKbOptions" "ctrl:nocaps"
-EndSection 
-
+	#MatchProduct "Ultimate Gadget Laboratories Ultimate Hacking Keyboard"
+	Option "XKbLayout" "us,us"
+	Option "XkbModel" "pc105"
+	Option "XkbVariant" ",dvp"
+	Option "XkbOptions" "ctrl:nocaps,grp:shifts_toggle"
+EndSection
