xorg: add toggleable dvorak programmer layout

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -8,3 +8,10 @@ Section "InputClass"
 	Option "XkbVariant" ",dvp"
 	Option "XkbOptions" "ctrl:nocaps,grp:shifts_toggle"
 EndSection
+
+Section "InputClass"
+	Identifier "thinkpad-keyboard"
+	MatchIsKeyboard "on"
+	MatchProduct "AT Translated Set 2 keyboard"
+	Option "XkbOptions" "ctrl:nocaps,grp:shifts_toggle,altwin:swap_alt_win"
+EndSection
