--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -6,12 +6,12 @@ Section "InputClass"
 	Option "XKbLayout" "us,us"
 	Option "XkbModel" "pc105"
 	Option "XkbVariant" ",dvp"
-	Option "XkbOptions" "ctrl:nocaps,grp:ctrls_toggle"
+	Option "XkbOptions" "caps:backspace,grp:ctrls_toggle"
 EndSection
 
 Section "InputClass"
 	Identifier "thinkpad-keyboard"
 	MatchIsKeyboard "on"
 	MatchProduct "AT Translated Set 2 keyboard"
-	Option "XkbOptions" "ctrl:nocaps,grp:ctrls_toggle,altwin:swap_alt_win"
+	Option "XkbOptions" "caps:backspace,grp:ctrls_toggle,altwin:swap_alt_win"
 EndSection
