use menu key to toggle keymaps

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -6,7 +6,7 @@ Section "InputClass"
 	Option "XKbLayout" "us,us"
 	Option "XkbModel" "pc105"
 	Option "XkbVariant" ",dvp"
-	Option "XkbOptions" "caps:backspace,grp:ctrls_toggle"
+	Option "XkbOptions" "caps:backspace,grp:menu_toggle"
 EndSection
 
 Section "InputClass"
