--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -3,15 +3,15 @@ Section "InputClass"
 	MatchIsKeyboard "on"
 	# look in Xorg.n.log to find the name that may be used for MatchProduct
 	#MatchProduct "Ultimate Gadget Laboratories Ultimate Hacking Keyboard"
-	Option "XKbLayout" "us,us"
+	Option "XKbLayout" "us"
 	Option "XkbModel" "pc105"
-	Option "XkbVariant" ",dvp"
-	Option "XkbOptions" "caps:backspace,grp:menu_toggle"
+	Option "XkbVariant" "dvp"
+	Option "XkbOptions" "caps:backspace"
 EndSection
 
 Section "InputClass"
 	Identifier "thinkpad-keyboard"
 	MatchIsKeyboard "on"
 	MatchProduct "AT Translated Set 2 keyboard"
-	Option "XkbOptions" "caps:backspace,grp:ctrls_toggle,altwin:swap_alt_win"
+	Option "XkbOptions" "caps:backspace,altwin:swap_alt_win"
 EndSection
