--- a/home/.config/X11/xorg.conf.d/20-intel.conf
+++ b/home/.config/X11/xorg.conf.d/20-intel.conf
@@ -6,7 +6,10 @@ Section "Device"
     Option "TearFree" "true"
     #Option "AccelMethod" "uxa"
     #Option "TripleBuffer" "true"
+EndSection
 
+Section "ServerLayout"
+    Identifier "alwayson"
     Option "StandbyTime" "0"
     Option "SuspendTime" "0"
     Option "OffTime"     "0"
