remove use of custom xkeyboard-config

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -6,12 +6,12 @@ Section "InputClass"
 	Option "XKbLayout" "us"
 	Option "XkbModel" "pc105"
 	Option "XkbVariant" "dvp"
-	Option "XkbOptions" "caps:backspace,bksp:bksp_delete"
+	Option "XkbOptions" ""
 EndSection
 
 Section "InputClass"
 	Identifier "thinkpad-keyboard"
 	MatchIsKeyboard "on"
 	MatchProduct "AT Translated Set 2 keyboard"
-	Option "XkbOptions" "caps:backspace,bksp:bksp_delete,altwin:swap_alt_win"
+	Option "XkbOptions" "altwin:swap_alt_win"
 EndSection
