tmux: unclutter title

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -3,7 +3,7 @@ set -g set-titles on
 # pane_title captures the xterm escape sent by the shel
 # alacritty barfs on something here, I think it's session_alerts, under tinywl/wdwm
 #set -g set-titles-string "#{session_name}:#{window_index} #{window_name} #{pane_title} #{session_alerts}"
-set -g set-titles-string "#{session_name}:#{window_index} #{window_name} #{pane_title}"
+set -g set-titles-string "#{pane_title}"
 
 # don't need a status bar
 set -g status off
