fix another windows keyboard

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -1,8 +1,8 @@
+# look in Xorg.n.log to find the name that may be used for MatchProduct
+
 Section "InputClass"
-	Identifier "querty-dvp"
+	Identifier "qwerty-dvp"
 	MatchIsKeyboard "on"
-	# look in Xorg.n.log to find the name that may be used for MatchProduct
-	#MatchProduct "Ultimate Gadget Laboratories Ultimate Hacking Keyboard"
 	Option "XKbLayout" "us"
 	Option "XkbModel" "pc105"
 	Option "XkbVariant" "dvp"
@@ -10,8 +10,15 @@ Section "InputClass"
 EndSection
 
 Section "InputClass"
-	Identifier "thinkpad-keyboard"
+	Identifier "AT Translated Set 2 keyboard"
 	MatchIsKeyboard "on"
 	MatchProduct "AT Translated Set 2 keyboard"
+	Option "XkbOptions" "caps:escape,altwin:swap_alt_win"
+EndSection
+
+Section "InputClass"
+	Identifier "Das Keyboard D4269"
+	MatchIsKeyboard "on"
+	MatchProduct "Das Keyboard D4269"
 	Option "XkbOptions" "caps:escape,altwin:swap_alt_win"
 EndSection
