--- a/home/.config/X11/xorg.conf.d/20-amdgpu.conf
+++ b/home/.config/X11/xorg.conf.d/20-amdgpu.conf
@@ -4,3 +4,11 @@ Section "Device"
 	Option "VariableRefresh" "true"
 	Option "TearFree" "true"
 EndSection
+
+Section "ServerLayout"
+	Identifier "alwayson"
+	Option "StandbyTime" "0"
+	Option "SuspendTime" "0"
+	Option "OffTime"     "0"
+	Option "BlankTime"   "0"
+EndSection
