update uhk configuration

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -3,10 +3,10 @@
 Section "InputClass"
 	Identifier "qwerty-dvp"
 	MatchIsKeyboard "on"
-	Option "XKbLayout" "us"
-	Option "XkbModel" "pc105"
-	Option "XkbVariant" "dvp"
-	Option "XkbOptions" "caps:escape"
+	Option "XKbLayout" "us,us"
+	Option "XkbModel" "pc105,pc105"
+	Option "XkbVariant" "dvp,"
+	Option "XkbOptions" "caps:escape,grp:shifts_toggle"
 EndSection
 
 Section "InputClass"
