commented out configration for the hard to remember switching layout

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -4,9 +4,12 @@ Section "InputClass"
 	Identifier "qwerty-dvp"
 	MatchIsKeyboard "on"
 	Option "XKbLayout" "us"
+	#Option "XKbLayout" "us,us"
 	Option "XkbModel" "pc105"
 	Option "XkbVariant" "dvp"
+	#Option "XkbVariant" "dvp,"
 	Option "XkbOptions" "caps:escape"
+	#Option "XkbOptions" "caps:escape,grp:shifts_toggle"
 EndSection
 
 Section "InputClass"
