commented out configration for the hard to remember switching layout

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -3,12 +3,15 @@
 Section "InputClass"
 	Identifier "qwerty-dvp"
 	MatchIsKeyboard "on"
-	Option "XKbLayout" "us"
-	#Option "XKbLayout" "us,us"
 	Option "XkbModel" "pc105"
+
+	Option "XKbLayout" "us"
 	Option "XkbVariant" "dvp"
-	#Option "XkbVariant" "dvp,"
 	Option "XkbOptions" "caps:escape"
+	
+	# must specify multiple layouts in order to have multiple variants
+	#Option "XKbLayout" "us,us"
+	#Option "XkbVariant" "dvp,"
 	#Option "XkbOptions" "caps:escape,grp:shifts_toggle"
 EndSection
 
