revert accidental change

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -7,7 +7,7 @@ Section "InputClass"
 
 	Option "XKbLayout" "us"
 	Option "XkbVariant" "dvp"
-	#Option "XkbOptions" "caps:escape"
+	Option "XkbOptions" "caps:escape"
 	
 	# must specify multiple layouts in order to have multiple variants
 	#Option "XKbLayout" "us,us"
