ducky keyboard nocaps and switch alt win

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -28,3 +28,10 @@ Section "InputClass"
 	MatchProduct "Das Keyboard D4269"
 	Option "XkbOptions" "caps:escape,altwin:swap_alt_win"
 EndSection
+
+Section "InputClass"
+	Identifier "Heng Yu Technology K108D"
+	MatchIsKeyboard "on"
+	MatchProduct "Heng Yu Technology K108D"
+	Option "XkbOptions" "caps:escape,altwin:swap_alt_win"
+EndSection
