tmux: convenience bindings cwd to xsel and alacritty at cwd

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -25,9 +25,9 @@ set -ga update-environment ' SWAYSOCK WAYLAND_DISPLAY'
 %endif
 
 # use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
-unbind C-b
+unbind-key C-b
 set -g prefix C-a
-bind C-a send-prefix
+bind-key C-a send-prefix
 
 # clear scrollback
 bind-key C-L clear-history
@@ -39,3 +39,9 @@ bind-key a copy-mode
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+# cwd to X selection; xsel will run in the background until another process wants to put to X sel
+bind-key -T prefix u run-shell "echo '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
+
+# spawn alacritty at cwd; unset TMUX so that .zshrc will exec it
+bind-key -T prefix e run-shell -b "TMUX= alacritty --working-directory '#{pane_current_path}'"
