--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -41,7 +41,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # cwd to X selection; xsel will run in the background until another process wants to put to X sel
-bind-key -T prefix u run-shell "echo '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
+bind-key -T prefix u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
 
 # spawn alacritty at cwd; unset TMUX so that .zshrc will exec it
 bind-key -T prefix e run-shell -b "TMUX= alacritty --working-directory '#{pane_current_path}'"
