--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,8 +1,7 @@
 # write to xterm title via escape codes
 set -g set-titles on
-# pane_title captures the xterm escape sent by the shel
-# alacritty barfs on something here, I think it's session_alerts, under tinywl/wdwm
-#set -g set-titles-string "#{session_name}:#{window_index} #{window_name} #{pane_title} #{session_alerts}"
+
+# pane_title captures the xterm escape sent by the shell; rest is noise
 set -g set-titles-string "#{pane_title}"
 
 # don't need a status bar
@@ -30,7 +29,7 @@ set -g prefix C-a
 bind-key C-a send-prefix
 
 # clear scrollback
-bind-key C-L clear-history
+bind-key C-l clear-history
 
 # enter copy mode
 bind-key a copy-mode
