--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -34,7 +34,7 @@ bind-key C-l clear-history
 # vi copypasta mode
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode-vi y send-keys -X copy-selection
 
 # cwd to X selection; xsel will run in the background until another process wants to put to X sel
 bind-key -T prefix u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
