tmux restore copy-mode binding to a

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -28,6 +28,9 @@ unbind-key C-b
 set -g prefix C-a
 bind-key C-a send-prefix
 
+# enter copy mode
+bind-key a copy-mode
+
 # clear scrollback
 bind-key C-l clear-history
 
