tmux: finally sort out the strange behavior when selecting/copying buffers

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -36,8 +36,21 @@ bind-key C-l clear-history
 
 # vi copypasta mode
 set-window-option -g mode-keys vi
+
+# Disable tmux's built in X selection/clipboard handling, as it tries to use the terminal.
+# st sends to selection and clipboard, alacritty to clipboard if <= 766 characters, gnome-terminal/xterm/urxvt send nothing.
+set -g set-clipboard off
+
+# override copy-selection-and-cancel bindings to send to X clipboard
+bind-key -T copy-mode-vi C-j               send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
+bind-key -T copy-mode-vi Enter             send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
+unbind-key -T copy-mode-vi A # this was append-selection-and-cancel, purpose unknown, with no pipe option
+
+# use more vim like selection
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-no-clear "xsel --input --clipboard"
 
 # cwd to X selection; xsel will run in the background until another process wants to put to X sel
 bind-key -T prefix u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
+
