tmux: prefix C-l sends it to the terminal as well

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -32,7 +32,7 @@ bind-key C-a send-prefix
 bind-key a copy-mode
 
 # clear scrollback
-bind-key C-l clear-history
+bind-key C-l send-keys C-l \; clear-history
 
 # vi copypasta mode
 set-window-option -g mode-keys vi
