tmux: C-l now clears tmux history and the terminal

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -31,8 +31,8 @@ bind-key C-a send-prefix
 # enter copy mode
 bind-key a copy-mode
 
-# clear scrollback
-bind-key C-l send-keys C-l \; clear-history
+# clear terminal and scrollback
+bind-key -n C-l send-keys -R C-l \; clear-history
 
 # vi copypasta mode
 set-window-option -g mode-keys vi
