tmux: set a tmux TERM appropriate for the TERM that starts the session

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -14,14 +14,8 @@ set-window-option -g mode-style fg=black,bg=${HOST_COLOUR}
 # moar scollback
 set -g history-limit 10000
 
-# collect needful wayland environment variables
-set -ga update-environment ' SWAYSOCK WAYLAND_DISPLAY'
-
-# force tmux-256colour TERM
-# default back to "screen" when we're running a linux console, which has some vi highlighting failures when running tmux-256color
-%if #{!=:#{TERM},linux}
-	set -g default-terminal "tmux-256color"
-%endif
+# .zshrc will choose a TERM based on the tmux environment variable TERM
+set -g -a update-environment ' TERM'
 
 # use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
 unbind-key C-b
