--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -14,9 +14,8 @@ set-window-option -g mode-style fg=black,bg=${HOST_COLOUR}
 # moar scollback
 set -g history-limit 10000
 
-# OTERM should be set to the value of TERM in the originating process when starts a new session or attaching to an existing.
-# shell startup and precmd will choose a TERM based on OTERM if it has changed.
-set -g -a update-environment ' OTERM'
+# .zshrc will choose a TERM based on the tmux environment variable TERM
+set -g -a update-environment ' TERM'
 
 # use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
 unbind-key C-b
